Fixed the social icons and alignment issues

--- a/Stylesheets/Stylesheet.css
+++ b/Stylesheets/Stylesheet.css
@@ -104,9 +104,9 @@ header nav a:hover{
 
 .website-logo{
     background-image: url('../Images/Logo-white-logo.png');
-    background-position: center;
+    /* background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     height: 50px;
     width: 75px;
     cursor: pointer;
@@ -289,7 +289,6 @@ header nav a:hover{
 
 .about p{
     justify-content: center;
-    word-wrap: break-word;
     padding: 10px 10px 5px 60px;
     text-align: left;
     line-height: 1.5em;
@@ -301,7 +300,7 @@ header nav a:hover{
         @media(max-width: 700px)
         {
             .about{
-                margin-left: 0;
+                margin-left: -20px;
             }
             .book-logo{
                 display: none;
